Bug 408310 - "20071213 trunk crash when visiting protopage.com @ all platforms" (Make sure to use the right paletteSize to prevent crashes) [p=alfredkayser@nl.ibm.com (Alfred Kayser) r=stuart sr=tor a=blocking1.9+]